# darli

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  main.ipynb  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
darli/: __init__.py  robots.py  utils.py
darli/arrays/: __init__.py  arraylike.py  casadi.py  numpy.py
darli/backend/: __init__.py  _base.py  _casadi.py  _pinocchio.py  base.py  casadi.py  pinocchio.py
darli/backends/: __init__.py
darli/functional/: __init__.py  _body.py  _contact.py  _model.py  _state_space.py
darli/integrators/: __init__.py  _base.py  _mid_point.py  _rk4.py
darli/model/: __init__.py  _base.py  _body.py  _contact.py  _model.py
darli/modeling/: __init__.py  base.py  body.py  contact.py  parametric.py  robot.py  state_space.py  symbolic.py
darli/models/: __init__.py  _regressors.py  backend.py  body.py  contact.py  model.py  model_casadi.py  model_pinocchio.py  robot_model.py  state_space.py
darli/parametric/: __init__.py  _functional.py  _model.py  _parameters.py
darli/quaternions/: __init__.py  quaternions.py
darli/robots/: __init__.py  _robots.py
darli/state_space/: __init__.py  (+6 more)
docs/: 00_intro.md  01_model.md  02_state_space.md  citations.md  contributing.md  functions.md
examples/: 01_intro.ipynb  01_models_and_robots.ipynb  02_benchmark.ipynb  02_robots.ipynb  03_benchmark.ipynb  04_rollout.ipynb  sysid.ipynb
tests/: _parametric.ipynb  _reduced_constraints.ipynb  _torch_pin.py  modeling.py  sample.py
tutorial/: 00_intro.ipynb  01_model.ipynb  02_state_space.ipynb  03_functional.ipynb  04_parametric.ipynb
(+49 files in other folders)
