[project]
name = "darli"
description = "The DARLi is a Python 3 library that supports both numerical and symbolical computations of open loop articulated robots provided urdf file."
version = "0.2.4"
authors = [{ name = "Lev Kozlov" }, { name = "Simeon Nedelchev" }]
dependencies = ["cmeel_casadi_kin_dyn==1.6.6"]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pre-commit"]


[project.urls]
homepage = "https://github.com/simeon-ned/darli"
repository = "https://github.com/simeon-ned/darli.git"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "darli",
    "darli.backend",
    "darli.arrays",
    "darli.quaternions",
    "darli.modeling",
    "darli.modeling.functional",
    "darli.modeling.state_space",
    "darli.modeling.parametric",
]
